<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".ViewProfile"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_viewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Your Profile"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@mipmap/no_avatar"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/name_title"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_title"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:text="@string/name_value" />


                <TextView
                    android:id="@+id/mail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_text"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="15dp"
                    android:text="@string/mail_title" />

                <TextView
                    android:id="@+id/mail_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mail_title"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:text="@string/mail_value" />

                <TextView
                    android:id="@+id/bio_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mail_text"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="15dp"
                    android:text="@string/bio_title" />

                <TextView
                    android:id="@+id/bio_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bio_title"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:text="@string/bio_value" />

                <Button
                    android:id="@+id/btn_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="My Books" />
            </LinearLayout>


        </ScrollView>


    </LinearLayout>

</LinearLayout>