<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowAllBooks"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:srcCompat="@android:color/darker_gray" />

                    <Button
                        android:id="@+id/load_image_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:onClick="openGallery"
                        android:text="@string/load_image_button" />

                    <Button
                        android:id="@+id/open_camera_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignEnd="@+id/load_image_button"
                        android:layout_alignRight="@+id/load_image_button"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="50dp"
                        android:text="@string/open_camera_button" />

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/isbn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="20dp"
                    android:text="@string/book_isbn" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="true"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editText_book_isbn"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/isbn"
                        android:layout_margin="@dimen/margin"
                        android:layout_weight="0.8"
                        android:ems="10"
                        android:inputType="number"
                        android:maxLength="13"/>

                    <Button
                        android:id="@+id/btn_book_isbn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"
                        android:inputType="number"
                        android:text="@string/load_isbn" />

                </LinearLayout>


                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="20dp"
                    android:text="@string/book_title" />

                <EditText
                    android:id="@+id/editText_book_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="10dp"
                    android:text="@string/book_author" />

                <EditText
                    android:id="@+id/editText_book_author"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/book_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="10dp"
                    android:text="@string/book_publisher" />

                <EditText
                    android:id="@+id/editText_book_publisher"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/book_editYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="10dp"
                    android:text="@string/book_editYear" />

                <EditText
                    android:id="@+id/editText_book_editYear"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:ems="10"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/book_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="10dp"
                    android:text="@string/book_genre" />

                <Spinner
                    android:id="@+id/spinner_bookGenre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/book_genre_list"
                    android:spinnerMode="dialog"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="10dp"/>


                <TextView
                    android:id="@+id/book_tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_margin"
                    android:layout_marginTop="15dp"
                    android:text="@string/book_tags" />

                <EditText
                    android:id="@+id/editText_book_tags"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:ems="10"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>